[package]
name = "prawned"
version = "0.1.0"
authors = ["Matthew Weeks <scriptjunkie@scriptjunkie.us>"]
edition = "2018"
license = "AGPL 3"

[profile.release]
panic = 'abort'
lto = true

[dependencies]
sha1 = "0.6.0"
base64 = "0.13.0"
smallvec = { version = "1.6.1", features = ["write"] }
p256 = { version = "0.7.2", features = ["ecdh", "ecdsa"] }
rand_core = { version = "0.5.1", features = ["getrandom"] }
aes-gcm-siv = { version = "0.9.0", features = ["heapless"] }
